# django-nats-consumer

./: .pre-commit-config.yaml  CHANGELOG.md  DECORATOR_MIGRATION.md  README.md  pyproject.toml  pytest.ini  run_tests.py
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  docker-compose.yml  nats.Dockerfile
.github/ISSUE_TEMPLATE/: bug_report.md
src/example/: manage.py
src/example/nats_example/: apps.py  asgi.py  settings.py  urls.py
src/example/nats_example/consumers/: __init__.py  order.py
src/example/nats_example/management/commands/: publish_messages.py
src/nats_consumer/: __init__.py  apps.py  consumer.py  exceptions.py  handler.py  operations.py  settings.py
src/nats_consumer/management/commands/: nats_consumer.py
tests/: __init__.py  conftest.py  test_connect.py  test_consumer.py  test_consumer_integration.py  test_event_loop_policy.py  test_handler.py  test_operations.py  test_reload.py
tests/server/example/: consumers.py  settings.py
